--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Ignore py file with email login
+secrets.py
+
+# Ignore images
+*.png
+*.jpg
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
